# codebreakers_task8

./: Cargo.toml  names.py  uuids.py  versions.txt
src/: decrypt.rs  keybrute.rs  keyslide.rs  main.rs  session.rs
