[package]
name = "codebreakers_task8_brute"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3"
#itertools = "0.10.1"
itertools = { git = "https://github.com/iago-lito/itertools", branch="cartesian_power" }
rayon = "1.5"
numtoa = "0.2.4"
sha2 = "0.9.8"
sodiumoxide = "0.2.7"
indicatif = { version = "0.17.0-beta.1", features = ["rayon"]}
hex = "0.4.3"
ring = "0.16.20"

[profile.release]
debug = true
